k8s/data-explorer/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: data-explorer
  labels:
    app: data-explorer
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "data"
    gethomepage.dev/name: "Data Explorer"
    gethomepage.dev/description: "Streamlit Data Browser"
    gethomepage.dev/group: "Data Services"
    gethomepage.dev/icon: "si-streamlit"
    gethomepage.dev/href: "http://data.talos00"
    gethomepage.dev/siteMonitor: "http://data-explorer.catalyst-data.svc.cluster.local:8501"
    gethomepage.dev/weight: "1"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`data.talos00`)
      kind: Rule
      services:
        - name: data-explorer
          port: 8501
